:boom::tada: Support added for comparing variables by years. Swagger docs update
